--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,8 +24,8 @@ jobs:
     - name: tree
       run: tree ./
       
-    - name: Upload build artifacts
+    #- name: Upload build artifacts
       #uses: actions/upload-artifact@v2
-      with:
-        name: AssetStuio_net6.0
-        path: AssetStudioGUI\bin\Release\net6.0-windows
+    #  with:
+    #    name: AssetStuio_net6.0
+    #    path: AssetStudioGUI\bin\Release\net6.0-windows
