--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Build
       run: |
-        go mod init
+        go mod init github.com/hpxro7/wwiseutil
         cd cmd
         go build -v
       
