--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,15 +19,16 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      run: |
-        go mod init github.com/hpxro7/wwiseutil
-        cd cmd
-        go build -v
+      run: go mod init github.com/hpxro7/wwiseutil
+      
+    - name: tree0
+      run: tree /?
       
     - name: tree1
-      run: go build -v
+      run: tree /?
+      
     - name: tree2
-      run: tree
+      run: go build -v cmd
     #- name: Upload build artifacts
       #uses: actions/upload-artifact@v2
     #  with:
