--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,6 +22,8 @@ jobs:
       run: go mod init github.com/hpxro7/wwiseutil
     - name: tree11
       run: pwd
+    - name: aaa
+      run: set GOPATH
     - name: tree12
       run: |
         cd cmd
