--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,7 +27,7 @@ jobs:
         cd cmd
         go build -v
       env:
-        GOPATH: ./
+        GOPATH: $GITHUB_WORKSPACE
     - name: aaa
       run: set GOPATH
     #- name: BuildCLi
