--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,13 +23,13 @@ jobs:
     - name: tree11
       run: pwd
     - name: aaa
-      run: echo "$GITHUB_WORKSPACE"
+      run: echo $GITHUB_WORKSPACE
     - name: tree12
       run: |
         cd cmd
         go build -v
       env:
-        GOPATH: "${{ GITHUB_WORKSPACE }}"
+        GOPATH: "$GITHUB_WORKSPACE"
 
     #- name: BuildCLi
     #  run: go build -v
