--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Go Mod
       run: go mod init github.com/hpxro7/wwiseutil
     - name: tree11
-      run: pwd
+      run: go mod init myapp
     - name: aaa
       run: echo $GITHUB_WORKSPACE
     - name: tree12
