--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,20 +21,18 @@ jobs:
     - name: Set GOPATH
       # temporary fix
       # see https://github.com/actions/setup-go/issues/14
-      run: |
-        echo "##[set-env name=GOPATH;]$(dirname $GITHUB_WORKSPACE)"
-        echo "##[add-path]$(dirname $GITHUB_WORKSPACE)/bin"
-      shell: bash
+      run: echo "GOPATH=$(dirname $GITHUB_WORKSPACE)" >> $GITHUB_ENV
       
     - name: Go Mod
       run: go mod init github.com/hpxro7/wwiseutil
     - name: aaa
-      run: echo $GOPATH
+      run: echo "${{ env.GOPATH }}"
     - name: tree12
       run: |
         cd cmd
         go build -v
-
+      env:
+        GOPATH: "${{ env.GOPATH }}"
     #- name: BuildCLi
     #  run: go build -v
       
