--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,8 @@ jobs:
     - name: Set GOPATH
       # temporary fix
       # see https://github.com/actions/setup-go/issues/14
-      run: echo "GOPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
+      run: echo "GOPATH=$(dirname $GITHUB_WORKSPACE)" >> $GITHUB_ENV
+      shell: bash
       
     - name: Go Mod
       run: go mod init github.com/hpxro7/wwiseutil
