--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,6 +10,9 @@ jobs:
 
   build:
     runs-on: windows-latest
+    env:
+      GO111MODULE: 'off'
+      GOPATH: ${{ github.workspace }}
     steps:
     - uses: actions/checkout@v2
 
@@ -17,7 +20,9 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
-
+    
+    - name: VVVVV
+      run: echo "${{ env.GOPATH }}"
     #- name: Set GOPATH
       # temporary fix
       # see https://github.com/actions/setup-go/issues/14
