--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,6 +10,9 @@ jobs:
 
   build:
     runs-on: windows-latest
+    defaults:
+      run:
+        working-directory: ${{ env.GOPATH }}/src/${{ github.repository }}
     env:
       GO111MODULE: 'off'
       GOPATH: ${{ github.workspace }}
