--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,15 +10,15 @@ jobs:
 
   build:
     runs-on: windows-latest
-    defaults:
-      run:
-        working-directory: src
     env:
       GO111MODULE: 'off'
       GOPATH: ${{ github.workspace }}
     steps:
     - uses: actions/checkout@v2
-
+      with:
+        fetch-depth: 0
+        path: ./src
+      
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
