--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,6 +35,7 @@ jobs:
         go get github.com/therecipe/qt/widgets
     - name: xxx
       run: tree "${{ env.GOPATH }}"
+      shell: pwsh
     - name: xxx
       run: dir "${{ env.GOPATH }}"
     - name: BuildCLi
