--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,7 +41,12 @@ jobs:
 
     - name: Get Qt binding for Go
       run: go get -v github.com/therecipe/qt/cmd/...
+    - uses: actions/cache@v2
+      id: cache-qt-bindings-win
+      with:
+        path: ${{ github.workspace }}/src/github.com/therecipe
     - name: Generate Qt bindings
+      if: ${{ steps.cache-qt-bindings-win.outputs.cache-hit != 'true' }}
       run: ${{ env.GOPATH }}/bin/qtsetup -test=false
     - name: xxx
       run: tree "${{ env.GOPATH }}"
