--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,6 +29,11 @@ jobs:
       with:
         path: ${{ github.workspace }}/src/github.com/therecipe
         key: cache-qt-bindings-win
+    - uses: actions/cache@v2
+      id: cache-qt-bindings-exe
+      with:
+        path: ${{ github.workspace }}/bin
+        key: cache-qt-bindings-exe
 
     - name: Go Mod
       if: ${{ steps.cache-qt-bindings-win.outputs.cache-hit != 'true' }}
@@ -43,7 +48,7 @@ jobs:
         go build -v
 
     - name: Get Qt binding for Go
-      if: ${{ steps.cache-qt-bindings-win.outputs.cache-hit != 'true' }}
+      if: ${{ steps.cache-qt-bindings-exe.outputs.cache-hit != 'true' }}
       run: go get -v github.com/therecipe/qt/cmd/...
     - name: Generate Qt bindings
       if: ${{ steps.cache-qt-bindings-win.outputs.cache-hit != 'true' }}
